--- a/style.css
+++ b/style.css
@@ -1,22 +1,16 @@
-
-.image-gallery {
-    display: flex;
-}
-.image-gallery {
+ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
   }
   
-  .image-gallery > li {
-    flex-basis: 350px; /* width: 350px; */
+  li {
+    height: 40vh;
+    flex-grow: 1;
   }
   
-  .image-gallery li img {
+  img {
+    max-height: 100%;
+    min-width: 100%;
     object-fit: cover;
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
-    border-radius: 5px;
-}
+    vertical-align: bottom;
+  }
